- css finished - new icons - feeds enabled and styled - db updated

--- a/all/themes/pixelgarage/less/content.less
+++ b/all/themes/pixelgarage/less/content.less
@@ -65,7 +65,7 @@ body.navbar-is-fixed-top {
 }
 
 body {
-  background-color: @pxl-color-yellow;
+  background-color: @pxl-color-body-bg;
 
   .main-container {
     #page-header {
@@ -89,6 +89,7 @@ body {
           margin: 20px 0 10px;
           font-family: @pxl-title-font;
           font-size: @font-size-h1;
+          border: none;
         }
 
         .breadcrumb {
