--- a/all/themes/pixelgarage/less/fonts.less
+++ b/all/themes/pixelgarage/less/fonts.less
@@ -2,7 +2,6 @@
  * Pixelgarage fonts
  * --------------------------------------------------*/
 // Google font
-@import 'https://fonts.googleapis.com/css?family=Catamaran:300,800';
 
 //
 // Awesome icon font
@@ -44,3 +43,22 @@
 //
 // font faces
 //
+@font-face {
+  font-family: 'Catamaran-Light';
+  src: url('@{pxl-font-path}/CatamaranLight/CatamaranLight.eot');
+  src: url('@{pxl-font-path}/CatamaranLight/CatamaranLight.eot') format('embedded-opentype'),
+  url('@{pxl-font-path}/CatamaranLight/CatamaranLight.woff2') format('woff2'),
+  url('@{pxl-font-path}/CatamaranLight/CatamaranLight.woff') format('woff'),
+  url('@{pxl-font-path}/CatamaranLight/CatamaranLight.ttf') format('truetype'),
+  url('@{pxl-font-path}/CatamaranLight/CatamaranLight.svg#CatamaranLight') format('svg');
+}
+
+@font-face {
+  font-family: 'Catamaran-ExtraBold';
+  src: url('@{pxl-font-path}/CatamaranExtraBold/CatamaranExtraBold.eot');
+  src: url('@{pxl-font-path}/CatamaranExtraBold/CatamaranExtraBold.eot') format('embedded-opentype'),
+  url('@{pxl-font-path}/CatamaranExtraBold/CatamaranExtraBold.woff2') format('woff2'),
+  url('@{pxl-font-path}/CatamaranExtraBold/CatamaranExtraBold.woff') format('woff'),
+  url('@{pxl-font-path}/CatamaranExtraBold/CatamaranExtraBold.ttf') format('truetype'),
+  url('@{pxl-font-path}/CatamaranExtraBold/CatamaranExtraBold.svg#CatamaranExtraBold') format('svg');
+}
