--- a/all/themes/pixelgarage/less/mixins/bs-modal.less
+++ b/all/themes/pixelgarage/less/mixins/bs-modal.less
@@ -122,7 +122,14 @@
               font-family: @pxl-text-font;
               font-size: 60px;
               font-weight: normal;
-              color: @pxl-color-main;
+              color: @link-color;
+
+            }
+
+            &:hover {
+              span{
+                color: @link-hover-color;
+              }
             }
           }
 
