--- a/all/themes/pixelgarage/less/pxlComponents/block-language.less
+++ b/all/themes/pixelgarage/less/pxlComponents/block-language.less
@@ -31,7 +31,7 @@ ul.language-switcher-locale-url {
     a.language-link {
       display: inline-block;
       padding-right: 5px;
-      font-family: @pxl-text-font-light;
+      font-family: @pxl-text-font-bold;
       font-size: 18px;
       line-height: 18px;
       text-transform: uppercase;
