--- a/all/themes/pixelgarage/less/pxlComponents/node-facebook.less
+++ b/all/themes/pixelgarage/less/pxlComponents/node-facebook.less
@@ -36,14 +36,14 @@
         h2 {
           margin-top: 0;
           font-family: @pxl-text-font-bold;
-          #pxl-mixins.font-size-responsive(17px, 14px);
+          #pxl-mixins.font-size-responsive(18px, 14px);
           color: @text-color;
           line-height: 1.5;
         }
       }
 
       .field-name-body {
-        #pxl-mixins.wysiwyg-body(14px; @font-size-base; 14px);
+        #pxl-mixins.wysiwyg-body(16px; 18px; 16px);
         color: @text-color;
       }
 
@@ -53,7 +53,7 @@
         .field-item {
           a {
             font-family: @pxl-text-font-light;
-            font-size: 14px;
+            font-size: 16px;
             text-align: left;
             color: @link-color;
 
@@ -71,7 +71,7 @@
 
         .field-item {
           font-family: @pxl-text-font-light-italic;
-          font-size: 14px;
+          font-size: 16px;
           text-align: left;
           color: @text-color;
         }
@@ -84,7 +84,7 @@
 
         .field-item {
           font-family: @pxl-text-font;
-          font-size: 10px;
+          font-size: 12px;
           text-align: right;
           color: @text-color;
 
@@ -105,16 +105,14 @@
 
         .field-item {
           font-family: @pxl-text-font;
-          font-size: 10px;
+          font-size: 12px;
           text-align: left;
           color: @text-color;
 
           &:after {
             content: 'Likes';
             margin-left: 10px;
-            font-family: @pxl-text-font;
-            font-size: 10px;
-            color: @text-color;
+
           }
         }
       }
