--- a/all/themes/pixelgarage/less/pxlComponents/node-tweet.less
+++ b/all/themes/pixelgarage/less/pxlComponents/node-tweet.less
@@ -30,7 +30,7 @@
         h2 {
           margin: 15px;
           font-family: @pxl-text-font-light;
-          #pxl-mixins.font-size-responsive(@font-size-base);
+          #pxl-mixins.font-size-responsive(18px, 14px);
           color: @text-color;
         }
       }
@@ -56,7 +56,7 @@
 
         .field-item {
           font-family: @pxl-text-font-light;
-          font-size: 14px;
+          font-size: 16px;
           text-align: left;
           color: @text-color;
 
@@ -75,7 +75,7 @@
 
         .field-item {
           font-family: @pxl-text-font-light-italic;
-          font-size: 14px;
+          font-size: 16px;
           text-align: left;
           color: @text-color;
         }
@@ -83,7 +83,7 @@
 
       .field-name-field-tweet-contents {
         margin: 0 0 20px;
-        #pxl-mixins.wysiwyg-body(14px; @font-size-base; 14px);
+        #pxl-mixins.wysiwyg-body(16px; 18px; 16px);
         color: @text-color;
 
         a {
@@ -104,7 +104,7 @@
 
         .field-item {
           font-family: @pxl-text-font;
-          font-size: 10px;
+          font-size: 12px;
           text-align: right;
           color: @text-color;
 
