--- a/all/themes/pixelgarage/less/variable-overrides.less
+++ b/all/themes/pixelgarage/less/variable-overrides.less
@@ -17,6 +17,7 @@
 @pxl-color-border: #5f5e5e;
 @pxl-color-border-active: @pxl-color-main;
 
+@pxl-color-body-bg: @pxl-color-yellow;
 @pxl-color-box-bg: @pxl-color-red;
 
 
