--- a/all/themes/pixelgarage/less/pxlComponents/node-footer.less
+++ b/all/themes/pixelgarage/less/pxlComponents/node-footer.less
@@ -21,12 +21,12 @@
   color: white;
   outline: none;
   #pxl-mixins.border-radius(0);
-  border: 1px solid @pxl-color-main;
+  border: 2px solid @pxl-color-main;
   background-color: @pxl-color-main;
-  opacity: 1.0;
 
   &:hover {
-    opacity: 0.6;
+    color: @pxl-color-main;
+    background-color: white;
   }
 
   @media @narrow {
@@ -196,7 +196,7 @@
             margin: 0;
           }
           .webform-component-email {
-            margin: 0 -2px;
+            margin: 0 3% 0 -2px;
             padding: 0;
             display: inline-block;
             width: 75%;
