--- a/all/themes/pixelgarage/less/pxlComponents/webform-submission.less
+++ b/all/themes/pixelgarage/less/pxlComponents/webform-submission.less
@@ -61,15 +61,15 @@
         padding: 5px 10px;
         font-family: @pxl-text-font;
         font-size: @font-size-base;
-        color: @link-color;
+        color: @pxl-color-main;
         text-decoration: none;
-        border-radius: 3px;
-        border: 2px solid @link-color;
+        border: 2px solid @pxl-color-main;
         outline: none;
+        background: none;
 
         &:hover, &:active {
-          color: #fff;
-          background: @link-hover-color none;
+          color: @pxl-color-body-bg;
+          background: @pxl-color-main none;
           outline: none;
         }
       }
