--- a/all/themes/pixelgarage/less/pxlComponents/webform.less
+++ b/all/themes/pixelgarage/less/pxlComponents/webform.less
@@ -14,17 +14,18 @@
 
 // field colors
 @webform-color-input: @text-color;
-@webform-color-input-bg: white;
+@webform-color-input-bg: rgba(255,255,255,0.0);
+@webform-color-placeholder: @text-color-placeholder;
 @webform-color-border: @pxl-color-main;
 @webform-color-border-active: @pxl-color-main;
 
 // field box
 @webform-control-height: 30px;
-@webform-border-radius: @border-radius-small;
-@webform-color-shadow: @gray-lighter;
+@webform-border-radius: 0;
+@webform-color-shadow: @pxl-color-main;
 
 // button colors
-@webform-color-submit: white;
+@webform-color-submit: @pxl-color-body-bg;
 @webform-color-submit-bg: @pxl-color-main;
 
 
@@ -59,10 +60,10 @@
   #pxl-mixins.border-radius(@radius);
   border: 1px solid @bg-color;
   background-color: @bg-color;
-  opacity: 1.0;
 
   &:hover, &:focus {
-    opacity: 0.6;
+    color: @bg-color;
+    background: none;
   }
 }
 
@@ -76,6 +77,7 @@ form.webform-client-form {
   fieldset.panel {
     margin: 0 auto 30px;
     border: none;
+    background:none;
     box-shadow: none;
 
     .panel-heading {
@@ -131,6 +133,9 @@ form.webform-client-form {
           fieldset.panel {
             // third level
             margin-top: 30px;
+            padding: 0 20px;
+            #pxl-mixins.border-radius(0);
+            border-left: 2px solid @pxl-color-main;
           }
         }
       }
@@ -229,7 +234,7 @@ form.webform-client-form {
       .form-label;
     }
 
-    div.description {
+    div.description, div.help-block {
       display: block;
       margin: 10px 0 0;
       font-family: @pxl-text-font-light;
@@ -252,18 +257,20 @@ form.webform-client-form {
       font-family: @pxl-text-font-light;
       #pxl-mixins.font-size-responsive(17px, 14px);
       color: @webform-color-input;
-      line-height: 22px;
+      line-height: 1.2;
       letter-spacing: normal;
       text-align: left;
-      box-shadow: none;
       #pxl-mixins.border-radius(@webform-border-radius);
-      border: 1px solid @webform-color-border;
+      border: none;
+      border-bottom: 1px solid @webform-color-border;
       background-color: @webform-color-input-bg;
+      .box-shadow(none);
+      #pxl-mixins.placeholder();
     }
-    input.form-text:focus,
-    textarea:focus {
+    input.form-text:focus, input.form-text:hover,
+    textarea:focus, textarea:hover {
       border: 1px solid @webform-color-border-active;
-      .box-shadow(0 0 3px @webform-color-shadow);
+      .box-shadow(0 0 3px @webform-color-shadow inset);
     }
 
     .form-textarea-wrapper {
@@ -280,13 +287,14 @@ form.webform-client-form {
         position: absolute;
         top: 0;
         right: 0;
-        padding: 5px 10px;
-        width: 60px;
+        padding: 0 10px;
+        max-width: 65%;
+        width: auto;
         height: auto;
         font-family: @pxl-text-font-light;
         #pxl-mixins.font-size-responsive(17px, 14px);
         color: @webform-color-input;
-        line-height: 22px;
+        line-height: 1.2;
         letter-spacing: normal;
         text-align: left;
         #pxl-mixins.border-radius(@webform-border-radius);
@@ -346,37 +354,43 @@ form.webform-client-form {
       #pxl-mixins.border-radius(@webform-border-radius);
       background-color: @webform-color-input-bg;
 
+      // button and label to select file
       input {
         position: relative;
         float: none;
         padding: 0;
         #pxl-mixins.font-size-responsive(17px, 14px);
+        color: @webform-color-input;
         text-align: left;
         border: none;
         background-color: @webform-color-input-bg;
+        .box-shadow(none);
       }
 
+      // image and name of uploaded file
       span.file {
         display: inline-block;
         vertical-align: middle;
         >img {
-
+          vertical-align: middle;
         }
         a {
-
+          vertical-align: middle;
         }
       }
 
+      // upload button
       button.btn {
         position: absolute;
-        top: 3px;
-        right: 3px;
-        bottom: 3px;
+        top: 0;
+        right: 0;
+        bottom: 0;
         margin: 0;
         .resp-submit-button();
         padding: 0 12px;
         #pxl-mixins.font-size-responsive(17px, 14px);
-        line-height: 17px;      }
+        line-height: 1.2;
+      }
     }
 
     &.webform-component-markup {
@@ -386,7 +400,7 @@ form.webform-client-form {
       h2, strong {
         font-family: @pxl-text-font;
         font-weight: normal;
-        color: @text-color;
+        color: @webform-color-input;
         font-size: 13px;
         line-height: 17px;
         text-align: left;
@@ -394,7 +408,7 @@ form.webform-client-form {
       p {
         font-family: @pxl-text-font-light;
         font-size: 13px;
-        color: @text-color;
+        color: @webform-color-input;
         line-height: 17px;
         text-align: left;
         background: none;
