--- a/all/themes/pixelgarage/less/pxlComponents/view-post-grid.less
+++ b/all/themes/pixelgarage/less/pxlComponents/view-post-grid.less
@@ -154,7 +154,7 @@
             .form-type-bef-link {
               display: inline-block;
               margin: 0 -2px;
-              padding: 0 5px;
+              padding: 0 10px;
 
               a {
                 display: block;
@@ -225,7 +225,7 @@
             .form-type-bef-link {
               display: inline-block;
               margin: 0 -2px;
-              padding: 0 5px;
+              padding: 0 10px;
 
               a {
                 display: block;
@@ -264,7 +264,7 @@
         &.views-reset-button {
           button.btn {
             margin: 0;
-            padding: 0;
+            padding: 0 0 0 10px;
             width: 28px;
             height: 28px;
             text-indent: -9999px;
