- finishing styling, icons, content

--- a/all/themes/pixelgarage/less/pxlComponents/block-language.less
+++ b/all/themes/pixelgarage/less/pxlComponents/block-language.less
@@ -43,6 +43,7 @@ ul.language-switcher-locale-url {
       &:after {
         content: '/';
         padding-left: 5px;
+        color: @pxl-color-active;
       }
 
       &.active, &:hover {
