--- a/all/themes/pixelgarage/less/pxlComponents/webform.less
+++ b/all/themes/pixelgarage/less/pxlComponents/webform.less
@@ -516,6 +516,10 @@ form.webform-client-form {
       border: none;
       background: none;
       text-decoration: none;
+
+      &:hover {
+        color: @text-color;
+      }
     }
   }
 }
