--- a/all/themes/pixelgarage/css/style.css
+++ b/all/themes/pixelgarage/css/style.css
@@ -9155,6 +9155,7 @@ ul.language-switcher-locale-url > li a.language-link {
 ul.language-switcher-locale-url > li a.language-link:after {
   content: '/';
   padding-left: 5px;
+  color: #000000;
 }
 ul.language-switcher-locale-url > li a.language-link.active,
 ul.language-switcher-locale-url > li a.language-link:hover {
@@ -9953,19 +9954,22 @@ ul.language-switcher-locale-url > li span.locale-untranslated {
 }
 .node-page .row div.col-sm-12 .field-name-body p,
 .node-page .row .col-sm-6 .field-name-body p {
+  font-family: 'Catamaran-Light', sans-serif;
   margin-bottom: 30px;
   line-height: 22px;
 }
 .node-page .row div.col-sm-12 .field-name-body a,
 .node-page .row .col-sm-6 .field-name-body a {
-  font-family: 'Catamaran-ExtraBold', sans-serif;
+  font-family: 'Catamaran-Light', sans-serif;
   color: #000000;
+  text-decoration: underline;
 }
 .node-page .row div.col-sm-12 .field-name-body a:focus,
 .node-page .row .col-sm-6 .field-name-body a:focus,
 .node-page .row div.col-sm-12 .field-name-body a:hover,
 .node-page .row .col-sm-6 .field-name-body a:hover {
   color: #ff0000;
+  text-decoration: none;
 }
 /*
  *  Footer node component
@@ -13651,6 +13655,9 @@ form.webform-client-form div.form-actions a.done-link:focus {
   form.webform-client-form div.form-actions a.done-link {
     font-size: 24px;
   }
+}
+form.webform-client-form div.form-actions a.done-link:hover {
+  color: #000000;
 }
 /*
  *  Webform confirmation component
